Media Controls: Update preload=none state

Update preload=none state based on the new mocks.

Also adds ShouldShow[Audio/Video]Controls to MediaControlsImpl to
simplify the logic around which set of controls we should show.

BUG=818659

No-Try: true

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ide3bed15161aa5e1e1096275212c718eacb24a77
Reviewed-on: https://chromium-review.googlesource.com/993757
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550487}
Former-commit-id: 096153b99de9f3a02c3a6fef3dbb43a6c701f24f