third_party/blink/renderer/modules/media_controls/elements/media_control_overflow_menu_button_element.cc
@@ -42,7 +42,9 @@ void MediaControlOverflowMenuButtonElement::UpdateShownState() {
 }
 
 void MediaControlOverflowMenuButtonElement::DefaultEventHandler(Event* event) {
-  if (event->type() == EventTypeNames::click) {
+  // Only respond to a click event if we are not disabled.
+  if (!hasAttribute(HTMLNames::disabledAttr) &&
+      event->type() == EventTypeNames::click) {
     if (GetMediaControls().OverflowMenuVisible()) {
       Platform::Current()->RecordAction(
           UserMetricsAction("Media.Controls.OverflowClose"));
