third_party/blink/renderer/modules/media_controls/media_controls_impl.h
@@ -278,7 +278,9 @@ class MODULES_EXPORT MediaControlsImpl final : public HTMLDivElement,
   void StartActingAsAudioControls();
   void StopActingAsAudioControls();
 
-  bool ShouldShowDisabledControls() const;
+  // Returns true/false based on which set of controls to display.
+  bool ShouldShowAudioControls() const;
+  bool ShouldShowVideoControls() const;
 
   // Node
   bool IsMediaControls() const override { return true; }
